# aws-docs-raglab

./: .env.example  .gitignore  README.md  pyproject.toml
app/: config.py  db.py
app/api/: main.py  routes_health.py  routes_query.py  schemas.py
app/cli/: main.py
app/evals/: report.py  runner.py  scoring.py
app/generation/: answer_service.py  llm_client.py
app/indexing/: chunker.py  embedder.py  index_service.py  vector_store.py
app/ingestion/: fetch_repo.py  fetcher.py  html_parser.py  normalizer.py  storage.py  sync.py
app/retrieval/: context_builder.py  retriever.py
data/: eval_dataset.jsonl
docs/: architecture.md  current_status.md  local_setup.md  project_plan.md  tradeoffs.md
sources/: aws_sources.yaml
tests/: conftest.py  test_answer_service.py  test_cli.py  test_context_builder.py  test_retriever.py
